# Zahapa

./: .gitignore  LICENSE.md  README.md  config.yml  example_config.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml
scripts/: zahapa.service
src/zahapa/: __main__.py  __version__.py  cli.py  database.py  logger.py  webserver.py
zahapa/: zahapa.py
